<resources>
    <string name="app_name">RoomE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--
        Homegroup Join Strings
    -->
    <string name ="hg_join_instruction">Please paste the ID of the HomeGroup ID you wish to join in the box below, or create a new HomeGroup!</string>
    <string name="hg_join_join">Join!</string>
    <string name="hg_join_create">Create HomeGroup!</string>
    <string name ="hg_join_textField">HomeGroup ID</string>
    <string name ="hg_join_OR">OR</string>

    <!--
        HomeGroup Menu Strings
    -->

    <string name ="hg_menu_calendar">Calendar</string>
    <string name ="hg_menu_ledger">Ledger</string>
    <string name ="hg_menu_shame">Wall of Shame</string>
    <string name ="hg_menu_chat">Chatroom</string>
    <string name ="hg_menu_rules">House Rules</string>
    <string name ="hg_menu_shop">Shopping List</string>
    <string name ="hg_homegroup_is">HomeGroup ID is</string>
    <!--
        Rules Menu Strings
    -->

    <string name ="rules_create">Create</string>
    <string name ="rules_refresh">Refresh</string>

    <!--
        Create Rule Strings
    -->

    <string name ="rules_ruleName">Rule Name</string>
    <string name ="rules_RuleContent">Rule Content</string>
    <string name ="rules_RuleSubmit">Submit</string>

    <!--
        View Rule Strings
    -->

    <string name ="rules_upVote">Yea!</string>
    <string name ="rules_downVote">Nay!</string>
    <string name ="rules_delete">Delete</string>

    <!--
    Ledger Strings
    -->

    <string name="bills_delete">delete</string>
    <string name="bills_still_owes">Still Owes:</string>
    <string name="bills_bill_name">Bill Name:</string>
    <string name="bills_bill_amount">Bill Amount:</string>
    <string name="bills_posted_by">Posted By:</string>
    <string name="bills_name">Bill Name</string>
    <string name="bills_amount">Bill Amount</string>
    <string name="bills_paid">Did they pay their share of the bill?</string>


    <!--
    Shopping List Strings
    -->
    <string name="shopping_list_item_name">Item Name:</string>

    <!--
    Calendar Strings
    -->
    <string name="calendar_event_name">Event Name:</string>
    <string name="calendar_event_start_date">Event Start Date:</string>
    <string name="calendar_event_start_time">Event Start Time:</string>
    <string name="calendar_event_end_date">Event End Date:</string>
    <string name="calendar_event_end_time">Event End Time:</string>
    <string name="calendar_delete">delete</string>
    <string name="hg_sign_out">Sign Out!</string>


</resources>
