<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inallofexistence.greatestdevelopersever.roome.JoinCreateHomegroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_bill_name"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <TextView
            android:id="@+id/vBillNameTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_bill_amount"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <TextView
            android:id="@+id/billAmountTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_posted_by"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/postedByTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_still_owes"
            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

        <ListView
            android:id="@+id/owesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/deleteBillBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_delete" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
